plugins {
    id 'java'
    id 'idea'
    id 'eclipse'
    id 'checkstyle'
    id 'jacoco'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

def projectName = 'islandora-syn'
def projectVersion = '2.0.0-SNAPSHOT'

sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11

def tomcatVersion = '10.1.42'

checkstyle {
    configFile = rootProject.file('gradle/checkstyle/checkstyle.xml')
    configProperties.checkstyleConfigDir = rootProject.file('gradle/checkstyle')
}

repositories {
     maven { url "https://repo.maven.apache.org/maven2" }
}

dependencies {
    implementation group: 'com.auth0', name: 'java-jwt', version:'3.1.0'
    implementation group: 'org.bouncycastle', name: 'bcprov-jdk15on', version:'1.56'
    compileOnly group: 'org.apache.tomcat', name: 'tomcat-catalina', version:tomcatVersion
    compileOnly group: 'org.apache.tomcat', name: 'tomcat-coyote', version:tomcatVersion

    testImplementation group: 'junit', name: 'junit', version:'4.12'
    testImplementation group: 'org.mockito', name: 'mockito-core', version:'5.12.0'
    testImplementation group: 'org.apache.tomcat', name: 'tomcat-catalina', version:tomcatVersion
    testImplementation group: 'org.apache.tomcat', name: 'tomcat-coyote', version:tomcatVersion
}

test {
    // Mockito's inline mock maker self-attaches a Byte Buddy agent to the test JVM.
    // JDK 21 disables self-attachment by default, so enable it explicitly.
    jvmArgs '-Djdk.attach.allowAttachSelf=true', '-XX:+EnableDynamicAgentLoading'
}

jacocoTestReport {
    reports {
        xml.required = true
        html.required = false
    }
}

jar {
    archiveBaseName = projectName
    archiveVersion = projectVersion
}

shadowJar {
    archiveBaseName = projectName
    archiveVersion = projectVersion
}

assemble.dependsOn(shadowJar);
